--- a/style.css
+++ b/style.css
@@ -131,6 +131,10 @@ nav li {
 
 /* responsive style */
 @media screen and (max-width:576px){
+    body{
+        max-width: 500px;
+
+    }
     nav{
         flex-direction: column;
         justify-content: flex-start;
