--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 * {
     font-family: 'Work Sans';
+    margin: 0;
 }
 
 body {
@@ -10,6 +11,7 @@ body {
     background-color: #FFF;
     ;
 }
+
 
 /* header style */
 nav {
@@ -88,6 +90,7 @@ nav li {
     font-weight: 600;
     text-transform: uppercase;
     height: 0px;
+    margin-bottom: 50px;
 }
 
 .banner-title {
@@ -140,19 +143,22 @@ nav li {
         justify-content: flex-start;
         align-items: flex-start;
         padding: 10px 50px;
+        margin:0 auto;
     }
     nav ul{
         flex-direction: column;
         gap: 10px;
     }
     .banner{
-        flex-direction: column;
-        padding: 10px 50px;
+        flex-direction: column-reverse;
+        padding: 10px 10px;
         justify-content: flex-start;
         align-items: flex-start;
+        margin:0 auto;
     }
     .banner-img-container{
         max-width: 300px;
+        margin-bottom: 50px;
     }
     .banner-img img{
         width: 100%
@@ -160,5 +166,30 @@ nav li {
     nav li{
         margin
     }
-    
+    .banner-content{
+        padding-left: 20px;
+    }
+    .banner-sub-title{
+        font-size:2.6em;
+        margin-bottom: 40px;
+        padding-right: 20px;
+    }
+    .banner-title{
+        font-size: 5em;
+        padding-left: 10px;
+    }
+    .banner-img-container{
+        padding-left: 20px;
+    }
+    .pri-btn {
+        padding: 21px 40px;
+        font-size: 15px;
+        margin-right: 10px;
+    }
+    .sec-btn {
+        padding: 21px 40px;
+        border-radius: 48px;
+        font-size: 15px;
+        font-weight: 600;
+    }
 }
